Updated model and requirements.txt
Changed model to Groq because i exceeded gemini free tier fuck

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ opencv-contrib-python
 langchain
 langchain-openai
 langchain_google_genai
+langchain_groq
 langchain-community
 python-dotenv
 sounddevice
